# python-repository-template

./: .cspell.json  .gitignore  README.md  dprint.json  lefthook.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  claude-code-review.yml  claude.yml  github-workflow-lint.yml  python-app.yml  test-and-lint.yml
src/python-repository-template/: main.py
